[FIX] mail: no flicker on showing hotkey in discuss app
When pressing "ALT" to see hotkey, discuss app was flickering.
This happens because the size of action list button is inconsistent
with the hotkey overlay.

This commit simplifies code around style of action list, so that the
height is deduced from padding like any other button in the rest of
UI. Padding and spacing has been adjusted to take into account the
removal of imposed height, which fixes the flicker issue.

Also fixes an issue where the message action "..." in mobile was
too far away from message bubble for other people messages. This
comes from long press dropdown also putting empty message action for
spacing but it doesn't take into account on message alignment. This
now puts the action always at the end of message action.

closes odoo/odoo#228235

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -32,7 +32,7 @@
     }
 
     .o-mail-Composer-mainActions {
-        margin-top: map-get($spacers, 1);
+        margin-top: map-get($spacers, 1) * 5 / 4;
     }
 
     &.o-chatWindow .o-mail-Composer-mainActions {
